--- a/my_terminal/.tmux.conf
+++ b/my_terminal/.tmux.conf
@@ -3,3 +3,10 @@ set -g prefix C-a
 # bind 'C-a C-a' to type 'C-a'
 bind C-a send-prefix
 unbind C-b
+
+# Smart pane switching with awareness of vim splits
+bind -n C-h run "(/usr/local/bin/tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && /usr/local/bin/tmux send-keys C-h) || /usr/local/bin/tmux select-pane -L"
+bind -n C-j run "(/usr/local/bin/tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && /usr/local/bin/tmux send-keys C-j) || /usr/local/bin/tmux select-pane -D"
+bind -n C-k run "(/usr/local/bin/tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && /usr/local/bin/tmux send-keys C-k) || /usr/local/bin/tmux select-pane -U"
+bind -n C-l run "(/usr/local/bin/tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && /usr/local/bin/tmux send-keys C-l) || /usr/local/bin/tmux select-pane -R"
+bind -n C-\ run "(/usr/local/bin/tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && /usr/local/bin/tmux send-keys 'C-\\') || /usr/local/bin/tmux select-pane -l"
